# SeroProjectCode

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
Streamlit/: Loading_Page.py  Sero_streamlit_app_load.py  sero_streamlit_app.py
Streamlit/pages/: 1 Usage Overview.py  2 Usage & Engagement.py  3 Risque & Plans.py  4 Sentiment Analysis.py  Analyse_Overview.py  Analyse_Response.py
notebooks/EDA/: 01_EDA.ipynb
src/: Davlan_test.py  anonymising.py  cleaning.py
