[project]
name = "seroprojectcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
