[project]
name = "seroprojectcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "altair>=5.5.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "watchdog>=6.0.0",
]
